Fixing AddShiftsDialog.js

--- a/public/styles/AddShiftDialog.scss
+++ b/public/styles/AddShiftDialog.scss
@@ -2,4 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .picker {
+        margin-bottom: 10px;
+    }
 }
